Add some basic unit testing