@@ -42,6 +42,7 @@ dependencies {
     // Junit
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+    testRuntimeOnly  'org.junit.platform:junit-platform-launcher'
 
     // Mockito
     testImplementation 'org.mockito:mockito-core:5.10.0'
@@ -53,4 +54,5 @@ test {
     testLogging {
         showStandardStreams = true
     }
+    jvmArgs += ["-Dnet.bytebuddy.experimental=true"]
 }
